[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "wsgi"
version = "0.0.1"
authors = [{ name="Diddi Oskarsson", email="diddi@diddi.se" }]
description = "WSGI"
requires-python = ">=3.10"
dependencies = [
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
test = [
    "pytest",
    "mockito",
    "pylint>=2.15.4",
    "mypy",
    "coverage"
]
